# magnum-natures

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  GeoShader.cpp  dna.cpp  event.cpp  geoshader.cpp  list.cpp  main.cpp  mainold.cpp  natures.cpp  natures_old.cpp  organism.cpp  quadtree.cpp  spritebatch.cpp  timer.cpp  treespritebatch.cpp  window.cpp
src/inc/: FlatShadeObject2D.h  WireframeObject2D.h  constants.hpp  dna.hpp  functions.hpp  list.hpp  main.hpp  natures.hpp  organism.hpp  quadtree.hpp  rectangle.hpp
src/inc/opengl/: camera.hpp  embed.cpp  geoshader.hpp  renderbatch.cpp  renderbatch.h  spritebatch.hpp  transform.hpp  treespritebatch.hpp
src/inc/opengl/shaders/: theshader.frag  theshader.geom  theshader.vert
src/inc/opengl/shaders/organism/: theshader.frag  theshader.geom  theshader.vert
src/inc/opengl/shaders/tree/: theshader.frag  theshader.geom  theshader.vert
src/inc/sdl/: event.hpp  timer.hpp  window.hpp
src/inc/shaders/geoshader/: GeoShader.h  frag.h  genom.h  vert.h
